--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,8 +44,21 @@ services:
       PMA_USER: root
       PMA_PASSWORD: root123
     ports:
-      - "8081:80"
+      - "8080:80"
+
+  jenkins:
+    image: jenkins/jenkins:lts
+    container_name: jenkins
+    restart: always
+    ports:
+      - "8081:8080"   # Jenkins web UI
+      - "50000:50000" # agentlar uchun
+    volumes:
+      - jenkins_home:/var/jenkins_home
+      - /var/run/docker.sock:/var/run/docker.sock   # 🔑 Docker socket
+      - /usr/bin/docker:/usr/bin/docker             # 🔑 Docker binary
 
 volumes:
   db_data:
+  jenkins_home:
 
